infrastructure/polaris/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polaris
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: "polaris.ORGANIZATION.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: polaris-dashboard
            port:
              number: 8300
  tls:
  - hosts:
    - polaris.ORGANIZATION.com
    secretName: polaris-ORGANIZATION-tls
